fix overscroll issue on x axis on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -78,6 +78,7 @@ a {
 }
 
 html {
+  position:relative;
   scroll-behavior: smooth;
   overflow-x: hidden;
   @include desktop {
